EXCEPTION_ACCESS_VIOLATION crash on opening file #48415

Closed
opened 2016-05-13 00:02:04 +02:00 by Dan · 13 comments

System Information
OS: Windows 7 Home Premium 64-bit
CPU: AMD A8-3800 APU
GPU: AMD Radeon HD 6550D (part of APU)

Blender Version
2.77a abf6f08

Short description of error
I was working on one of my projects when filling a face caused Blender to crash immediately. After that, Blender crashes whenever the file is opened.

Exact steps for others to reproduce the error

  1. Open .blend file.

Details
The file uses Cycles with CPU rendering. There is nothing linked to another .blend file, the only external files used are textures. This is the only affected file, all other files and features work as normal.

**System Information** OS: Windows 7 Home Premium 64-bit CPU: AMD A8-3800 APU GPU: AMD Radeon HD 6550D (part of APU) **Blender Version** 2.77a abf6f08 **Short description of error** I was working on one of my projects when filling a face caused Blender to crash immediately. After that, Blender crashes whenever the file is opened. **Exact steps for others to reproduce the error** 1. Open .blend file. **Details** The file uses Cycles with CPU rendering. There is nothing linked to another .blend file, the only external files used are textures. This is the only affected file, all other files and features work as normal.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mkPlasma

Added subscriber: @mkPlasma
Author

Forgot to mention this: The error seems to appear in the console among some stuff about shape keys. There is nothing else abnormal in the console.

Forgot to mention this: The error seems to appear in the console among some stuff about shape keys. There is nothing else abnormal in the console.
Author

File wasn't posted before: Reimu.blend

File wasn't posted before: [Reimu.blend](https://archive.blender.org/developer/F310355/Reimu.blend)

Added subscriber: @dr2d4

Added subscriber: @dr2d4

Added subscriber: @mont29

Added subscriber: @mont29

This comment was removed by @dr2d4

*This comment was removed by @dr2d4*

Not sure why you summoned me here in particular…

Not so easy to understand what's going on here, from what I understand you have a hair psys with effectors, one of them being a surface one, which seems to assume relevant effector's modifier has already been computed when that effector is evaluated in the psys, which is clearly not the case (surfacemodifier->bvhtree is indeed NULL).

Not familiar at all with this, will need more digging. In the mean time, if you could feature the same .blend just before it goes unusable, with exact step to make it crash, would help a lot.

Not sure why you summoned me here in particular… Not so easy to understand what's going on here, from what I understand you have a hair psys with effectors, one of them being a surface one, which seems to assume relevant effector's modifier has already been computed when that effector is evaluated in the psys, which is clearly not the case (surfacemodifier->bvhtree is indeed NULL). Not familiar at all with this, will need more digging. In the mean time, if you could feature the same .blend just before it goes unusable, with exact step to make it crash, would help a lot.
Author

In #48415#374185, @mont29 wrote:
Not sure why you summoned me here in particular…

Not so easy to understand what's going on here, from what I understand you have a hair psys with effectors, one of them being a surface one, which seems to assume relevant effector's modifier has already been computed when that effector is evaluated in the psys, which is clearly not the case (surfacemodifier->bvhtree is indeed NULL).

Not familiar at all with this, will need more digging. In the mean time, if you could feature the same .blend just before it goes unusable, with exact step to make it crash, would help a lot.

I can restore the file to an earlier working version, unfortunately, I had done some work on it before the crash. Even the .blend1 file became affected somehow. I'll try to redo my work on a previous version to see if I can get it to occur again, although I'm not sure it will work.

> In #48415#374185, @mont29 wrote: > Not sure why you summoned me here in particular… > > Not so easy to understand what's going on here, from what I understand you have a hair psys with effectors, one of them being a surface one, which seems to assume relevant effector's modifier has already been computed when that effector is evaluated in the psys, which is clearly not the case (surfacemodifier->bvhtree is indeed NULL). > > Not familiar at all with this, will need more digging. In the mean time, if you could feature the same .blend just before it goes unusable, with exact step to make it crash, would help a lot. I can restore the file to an earlier working version, unfortunately, I had done some work on it before the crash. Even the .blend1 file became affected somehow. I'll try to redo my work on a previous version to see if I can get it to occur again, although I'm not sure it will work.
Author

I was not able to reproduce the crash with the restored file. If it helps, the object I was working on when the crash occurred was the hair collision object, and it did have a surface force modifier.

I was not able to reproduce the crash with the restored file. If it helps, the object I was working on when the crash occurred was the hair collision object, and it did have a surface force modifier.

OK, found the issue - it’s when you save your .blend while a surface object is in Edit mode. ;)

OK, found the issue - it’s when you save your .blend while a surface object is in Edit mode. ;)
Bastien Montagne self-assigned this 2016-06-01 15:26:50 +02:00

This issue was referenced by b1704d18a1

This issue was referenced by b1704d18a1cc15f0dbb5fe6e27d80f0fae4b9e72

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48415
No description provided.