Fix T48415: Segfault on opening .blend in which a 'surface' force object was saved in Edit mode.

In that case, surface modifier won't run (until surface object goes back to Object mode),
and its bvhtree remains NULL.